Hide menu parts depending on which devices are enabled

--- a/app/src/main/res/layout/fragment_activity_prediction.xml
+++ b/app/src/main/res/layout/fragment_activity_prediction.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingEnd="20dp"
-            android:paddingStart="20dp">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp">
 
-
-        <TextView
-            android:id="@+id/indoor_likelihood"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Likelihood indoor: "/>
-    </LinearLayout>
-</ScrollView>
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/indoor_likelihood"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Likelihood indoor: "/>
+        </LinearLayout>
+    </ScrollView>
+
+    <include layout="@layout/content_connecting"/>
+</RelativeLayout>
