--- a/app/src/main/res/menu/menu_supervised.xml
+++ b/app/src/main/res/menu/menu_supervised.xml
@@ -3,9 +3,7 @@
       xmlns:tools="https://schemas.android.com/tools"
       tools:context="com.specknet.airrespeck.activities.MainActivity">
 
-    <group
-        >
-
+    <group>
         <item
             android:id="@+id/action_subject_mode"
             android:orderInCategory="10"
@@ -29,23 +27,6 @@
             android:orderInCategory="100"
             android:title="@string/action_close_app"
             app:showAsAction="never"/>
-
-
-        <!--
-
-        <item
-            android:id="@+id/action_settings"
-            android:icon="@drawable/ic_settings"
-            android:orderInCategory="90"
-            android:title="@string/action_settings"
-            app:showAsAction="never"/>
-
-        <item
-            android:id="@+id/action_user_profile"
-            android:orderInCategory="80"
-            android:title="@string/action_user_profile"
-            app:showAsAction="never" />
-                        -->
 
     </group>
 
