--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -30,8 +30,8 @@
                     android:id="@+id/nav_activity_summary"
                     android:title="@string/menu_activity_summary"/>
                 <item
-                    android:id="@+id/nav_activity_logging"
-                    android:title="@string/menu_activity_logging"/>
+                    android:id="@+id/nav_activity_logging_respeck"
+                    android:title="@string/menu_activity_logging_respeck"/>
             </menu>
         </item>
         <item
@@ -43,14 +43,14 @@
                     android:title="@string/menu_pulseox"/>
             </menu>
         </item>
-        <!--
         <item
             android:id="@+id/menu_other_subgroup"
             android:title="@string/menu_other_subgroup">
             <menu>
-
+                <item
+                    android:id="@+id/nav_activity_logging_general"
+                    android:title="@string/menu_activity_logging_general"/>
             </menu>
         </item>
-        -->
     </group>
 </menu>
