V 2.3.1: Timer on activity logging, respeck acceleration data screen

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -32,6 +32,9 @@
                 <item
                     android:id="@+id/nav_activity_logging_respeck"
                     android:title="@string/menu_activity_logging_respeck"/>
+                <item
+                    android:id="@+id/nav_activity_raw_accel_respeck"
+                    android:title="@string/menu_activity_raw_accel_respeck"/>
             </menu>
         </item>
         <item
