--- a/app/src/main/res/layout/fragment_activity_logging_respeck.xml
+++ b/app/src/main/res/layout/fragment_activity_logging_respeck.xml
@@ -46,6 +46,16 @@
                 android:layout_height="40dp"
                 android:layout_weight="0.04"/>
 
+            <TextView
+                android:id="@+id/count_up_timer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_weight="0.04"
+                android:gravity="center"
+                android:text="00:00"
+                android:textSize="20sp"/>
+
             <Button
                 android:id="@+id/record_button"
                 android:layout_width="match_parent"
