--- a/app/src/main/res/layout/fragment_activity_logging_respeck.xml
+++ b/app/src/main/res/layout/fragment_activity_logging_respeck.xml
@@ -38,7 +38,21 @@
                 android:layout_marginTop="15dp"
                 android:layout_weight="0.04"
                 android:gravity="center"
-                android:text="Chose activity"/>
+                android:text="Choose category"/>
+
+            <Spinner
+                android:id="@+id/category_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_weight="0.04"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_weight="0.04"
+                android:gravity="center"
+                android:text="Choose activity"/>
 
             <Spinner
                 android:id="@+id/activity_spinner"
@@ -70,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_weight="0.04"
+                android:enabled="false"
                 android:text="@string/button_text_cancel_recording"/>
         </LinearLayout>
     </ScrollView>
