--- a/app/src/main/res/layout/fragment_volume_calibration_recording.xml
+++ b/app/src/main/res/layout/fragment_volume_calibration_recording.xml
@@ -46,7 +46,7 @@
         android:text="Chose activity"/>
 
     <Spinner
-        android:id="@+id/activity_spinner"
+        android:id="@+id/category_spinner"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_weight="0.04"/>
