--- a/app/src/main/res/drawable/clickable_button_background.xml
+++ b/app/src/main/res/drawable/clickable_button_background.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false">
+        <shape>
+            <solid
+                android:color="#c4c4c4"/>
+            <corners
+                android:radius="20dp"/>
+            <padding
+                android:bottom="10dp"
+                android:left="10dp"
+                android:right="10dp"
+                android:top="10dp"/>
+        </shape>
+    </item>
     <item android:state_pressed="true">
         <shape>
             <solid
