--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -34,8 +34,8 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/background_rounded_lightgrey"
             android:paddingBottom="30dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
             android:paddingTop="30dp">
 
             <TableRow
@@ -44,11 +44,23 @@
                 android:layout_marginBottom="30dp"
                 android:gravity="center_vertical">
 
+                <ImageButton
+                    android:id="@+id/respeck_pause_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/clickable_button_background"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_pause_black_24dp"/>
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="80dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="10dp"
                     android:layout_weight="1"
-                    android:paddingRight="20dp"
+                    android:foregroundGravity="center"
                     app:srcCompat="@drawable/vec_respeck"/>
 
                 <ProgressBar
@@ -67,7 +79,7 @@
                     android:paddingBottom="15dp"
                     android:paddingTop="15dp"
                     android:visibility="gone"
-                    app:srcCompat="@drawable/vec_wireless"/>
+                    app:srcCompat="@drawable/vec_wireless_active"/>
 
                 <ImageView
                     android:id="@+id/not_enabled_respeck"
@@ -90,12 +102,13 @@
                     android:layout_marginRight="10dp"
                     android:background="@drawable/clickable_button_background"
                     android:padding="15dp"
-                    android:src="@android:drawable/ic_lock_power_off"/>
+                    android:src="@drawable/ic_power_settings_new_black_24dp"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="10dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/vec_airspeck"/>
 
@@ -115,7 +128,7 @@
                     android:paddingBottom="15dp"
                     android:paddingTop="15dp"
                     android:visibility="gone"
-                    app:srcCompat="@drawable/vec_wireless"/>
+                    app:srcCompat="@drawable/vec_wireless_active"/>
 
                 <ImageView
                     android:id="@+id/not_enabled_airspeck"
