--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -38,6 +38,15 @@
             </menu>
         </item>
         <item
+            android:id="@+id/menu_inhaler_subgroup"
+            android:title="@string/menu_inhaler_subgroup">
+            <menu>
+                <item
+                    android:id="@+id/nav_inhaler"
+                    android:title="@string/menu_inhaler"/>
+            </menu>
+        </item>
+        <item
             android:id="@+id/menu_other_subgroup"
             android:title="@string/menu_other_subgroup">
             <menu>
