--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -50,6 +50,9 @@
                 <item
                     android:id="@+id/nav_inout_prediction"
                     android:title="@string/menu_inout_prediction"/>
+                <item
+                    android:id="@+id/nav_coughing"
+                    android:title="@string/menu_coughing"/>
             </menu>
         </item>
     </group>
