First version working mostly in the middle of abdomen besides belly button

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -60,7 +60,7 @@
                     android:id="@+id/nav_inout_prediction"
                     android:title="@string/menu_inout_prediction"/>
                 <item
-                    android:id="@+id/nav_coughing"
+                    android:id="@+id/nav_coughing_prediction"
                     android:title="@string/menu_coughing"/>
             </menu>
         </item>
