--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -189,45 +189,45 @@
                         <ImageButton
                             android:id="@+id/camera_button"
                             android:layout_width="0dip"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_height="90dp"
                             android:layout_marginRight="10dp"
+                            android:layout_weight="1"
                             android:background="@drawable/clickable_button_background"
                             android:padding="5dp"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_camera" />
+                            app:srcCompat="@drawable/vec_camera"/>
 
                         <ImageButton
                             android:id="@+id/video_button"
                             android:layout_width="0dip"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_height="90dp"
                             android:layout_marginRight="10dp"
+                            android:layout_weight="1"
                             android:background="@drawable/clickable_button_background"
                             android:padding="5dp"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_video" />
+                            app:srcCompat="@drawable/vec_video"/>
 
                         <ImageButton
                             android:id="@+id/audio_button"
                             android:layout_width="0dip"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_height="90dp"
                             android:layout_marginRight="10dp"
+                            android:layout_weight="1"
                             android:background="@drawable/clickable_button_background"
                             android:padding="5dp"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_microphone" />
+                            app:srcCompat="@drawable/vec_microphone"/>
 
                         <ImageButton
                             android:id="@+id/text_button"
                             android:layout_width="0dip"
-                            android:layout_height="match_parent"
+                            android:layout_height="90dp"
                             android:layout_weight="1"
                             android:background="@drawable/clickable_button_background"
                             android:padding="5dp"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/vec_comment" />
+                            app:srcCompat="@drawable/vec_comment"/>
                     </TableRow>
            </TableLayout>
 
