--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -17,15 +17,6 @@
         android:orientation="vertical"
         android:weightSum="1">
 
-        <ImageButton
-            android:id="@+id/diary_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/clickable_button_background"
-            android:padding="15dp"
-            app:srcCompat="@drawable/vec_diary"/>
 
         <TableLayout
             android:layout_width="match_parent"
@@ -139,6 +130,27 @@
             </TableRow>
 
         </TableLayout>
+
+        <ImageButton
+            android:id="@+id/diary_button"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/clickable_button_background"
+            android:padding="15dp"
+            app:srcCompat="@drawable/vec_diary"/>
+
+        <ImageButton
+            android:id="@+id/rehab_button"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="15dp"
+            android:visibility="invisible"
+            android:background="@drawable/clickable_button_background"
+            android:padding="15dp"
+            app:srcCompat="@drawable/vec_lungs"/>
 
         <LinearLayout
             android:layout_width="match_parent"
