--- a/app/src/main/res/layout/fragment_respeck_readings_icons.xml
+++ b/app/src/main/res/layout/fragment_respeck_readings_icons.xml
@@ -61,7 +61,8 @@
                         android:gravity="center"
                         android:text="-.- Hz"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textSize="@dimen/text_size_bpm_small"/>
+                        android:textSize="@dimen/text_size_bpm_small"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
