Hide freq display

--- a/app/src/main/res/layout/fragment_respeck_readings_icons.xml
+++ b/app/src/main/res/layout/fragment_respeck_readings_icons.xml
@@ -62,7 +62,7 @@
                         android:text="-.- Hz"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textSize="@dimen/text_size_bpm_small"
-                        android:visibility="visible"/>
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
