--- a/app/src/main/res/layout/fragment_respeck_readings_icons.xml
+++ b/app/src/main/res/layout/fragment_respeck_readings_icons.xml
@@ -30,6 +30,36 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:animateLayoutChanges="false"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/text_batt_level"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="100%"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#041389"
+                        android:visibility="invisible"
+                        android:textSize="@dimen/text_size_bpm_large" />
+
+                    <TextView
+                        android:id="@+id/text_charging_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="charging"
+                        android:visibility="invisible"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textSize="@dimen/text_size_bpm_small" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="20"
+                    android:animateLayoutChanges="false"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -71,7 +101,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="0.3"
+                    android:layout_weight="1"
                     app:srcCompat="@drawable/vec_standing_sitting"
                     />
             </LinearLayout>
