activity logging for inhale

--- a/app/src/main/res/layout/fragment_activity_logging_respeck.xml
+++ b/app/src/main/res/layout/fragment_activity_logging_respeck.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.04"
                 android:gravity="center"
-                android:text="Enter subject name"/>
+                android:text="Enter subject ID"/>
 
             <EditText
                 android:id="@+id/name_text_field"
@@ -29,22 +29,22 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.04"
                 android:ems="10"
-                android:hint="Name"
+                android:hint="XXA123"
                 android:inputType="textPersonName"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_weight="0.04"
-                android:gravity="center"
-                android:text="Choose category"/>
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:layout_weight="0.04"-->
+<!--                android:gravity="center"-->
+<!--                android:text="Choose category"/>-->
 
-            <Spinner
-                android:id="@+id/category_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_weight="0.04"/>
+<!--            <Spinner-->
+<!--                android:id="@+id/category_spinner"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:layout_weight="0.04"/>-->
 
             <TextView
                 android:layout_width="match_parent"
