--- a/app/src/main/res/layout/fragment_activity_logging_respeck.xml
+++ b/app/src/main/res/layout/fragment_activity_logging_respeck.xml
@@ -16,21 +16,16 @@
                       android:orientation="vertical"
                       android:weightSum="1">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.04"
-                android:gravity="center"
-                android:text="Enter subject ID"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/name_text_field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.04"
-                android:ems="10"
-                android:hint="XXA123"
-                android:inputType="textPersonName"/>
+                android:gravity="center"
+                android:text="Subject ID: "
+                android:layout_marginBottom="50dp"/>
+
 
 <!--            <TextView-->
 <!--                android:layout_width="match_parent"-->
