--- a/app/src/main/res/layout/fragment_activity_logging_respeck.xml
+++ b/app/src/main/res/layout/fragment_activity_logging_respeck.xml
@@ -86,6 +86,12 @@
                 android:layout_weight="0.04"
                 android:enabled="false"
                 android:text="@string/button_text_cancel_recording"/>
+
+            <Button
+                android:id="@+id/upload_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upload"/>
         </LinearLayout>
     </ScrollView>
 
