--- a/app/src/main/res/layout/fragment_upload_files.xml
+++ b/app/src/main/res/layout/fragment_upload_files.xml
@@ -26,6 +26,13 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/spinning_circle"
+            android:padding="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +42,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Upload progress"
-                android:id="@+id/progress_bar_label"/>
+                android:id="@+id/progress_bar_label"
+                android:layout_gravity="center"/>
 
             <ProgressBar
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
