--- a/app/src/main/res/layout/fragment_respeck_readings_icons.xml
+++ b/app/src/main/res/layout/fragment_respeck_readings_icons.xml
@@ -25,35 +25,35 @@
                 android:layout_marginTop="25dp"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:animateLayoutChanges="false"
-                    android:orientation="vertical">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:animateLayoutChanges="false"-->
+<!--                    android:orientation="vertical">-->
 
-                    <TextView
-                        android:id="@+id/text_batt_level"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:text="100%"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="#041389"
-                        android:visibility="invisible"
-                        android:textSize="@dimen/text_size_bpm_large" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/text_batt_level"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="left"-->
+<!--                        android:text="100%"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceLarge"-->
+<!--                        android:textColor="#041389"-->
+<!--                        android:visibility="invisible"-->
+<!--                        android:textSize="@dimen/text_size_bpm_large" />-->
 
-                    <TextView
-                        android:id="@+id/text_charging_status"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:text="charging"
-                        android:visibility="invisible"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textSize="@dimen/text_size_bpm_small" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/text_charging_status"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="left"-->
+<!--                        android:text="charging"-->
+<!--                        android:visibility="invisible"-->
+<!--                        android:textAppearance="?android:attr/textAppearanceMedium"-->
+<!--                        android:textSize="@dimen/text_size_bpm_small" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
                 <LinearLayout
                     android:layout_width="wrap_content"
