--- a/app/src/main/res/menu/menu_supervised.xml
+++ b/app/src/main/res/menu/menu_supervised.xml
@@ -17,8 +17,14 @@
             app:showAsAction="never"/>
 
         <item
+            android:id="@+id/action_view_battery"
+            android:orderInCategory="30"
+            android:title="@string/action_view_battery"
+            app:showAsAction="never"/>
+
+        <item
             android:id="@+id/action_check_for_updates"
-            android:orderInCategory="20"
+            android:orderInCategory="40"
             android:title="@string/action_check_for_updates"
             app:showAsAction="never"/>
 
