--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -45,14 +45,30 @@
                     android:padding="15dp"
                     android:src="@drawable/ic_pause_black_24dp"/>
 
-                <ImageView
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="80dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:layout_weight="1"
                     android:foregroundGravity="center"
-                    app:srcCompat="@drawable/vec_respeck"/>
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        android:foregroundGravity="center"
+                        app:srcCompat="@drawable/vec_respeck"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Battery: 92%"/>
+
+
+                </LinearLayout>
+
+
 
                 <ProgressBar
                     android:id="@+id/progress_bar_respeck"
