--- a/app/src/main/res/layout/fragment_activity_logging_respeck.xml
+++ b/app/src/main/res/layout/fragment_activity_logging_respeck.xml
@@ -26,29 +26,6 @@
                 android:text="Subject ID: "
                 android:layout_marginBottom="50dp"/>
 
-<!--            <EditText-->
-<!--                android:id="@+id/name_text_field"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="0.04"-->
-<!--                android:ems="10"-->
-<!--                android:hint="Name"-->
-<!--                android:inputType="textPersonName"/>-->
-
-
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:layout_weight="0.04"-->
-<!--                android:gravity="center"-->
-<!--                android:text="Choose category"/>-->
-
-<!--            <Spinner-->
-<!--                android:id="@+id/category_spinner"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="40dp"-->
-<!--                android:layout_weight="0.04"/>-->
 
             <TextView
                 android:layout_width="match_parent"
@@ -95,7 +72,7 @@
                 android:id="@+id/upload_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Upload"/>
+                android:text="Upload all recordings"/>
         </LinearLayout>
     </ScrollView>
 
